* CONFIG: Added -with-prolog=<Prolog> by Milan Zamazal for integration
  as Debian (linux) package.


VERSION 1.0.10
==============

* UPDATE: calls to select/3 for compatibility to SWI-Prolog 3.4

* FIXED: Allow <!USEMAP before <!SHORTREF

* FIXED: handling the #empty map (SGML SHORTREF).

* MODIFIED: state-engine for <>, using a new state S_DECL0 after seeing <
  to decide whether this is a non-escaped < in CDATA or a real tag.  Also
  changed comment-handling to avoid the need for parser->previous_char.

* ADDED: sgml utility allow for parsing stdin.

* PERFORMANCE: Improved expand_[p]entities(), providing about 10%
  overall improvement.

* FIXED: crash in sgml (demo-)driver app causing a crash if the input
  file has no extension (Richard O'Keefe).

* ADDED: support for RCDATA declared-content elements

* FIXED: SGML-mode: immediately close EMPTY elements (i.e. do not allow
  for a closing </img>).

* IMPROVED: Error reporting on elements not in the DTD.

* ADDED: get_sgml_parser(Parser, dtd(-DTD)).

VERSION 1.0.8
=============

* FIXED: Problem in windows version regarding text/binary file and \ <-> /
  difference.

* FIXED: Problem finding HTML4 .soc file

* FIXED: entity_file() to avoid a crash if the entity is not in the catalog.

* ADDED: Parse not-quoted attribute values that require quotes by parsing
  upto the next layout character.  Give a warning.  For example:
  <hr width=50%> is parsed as <hr width="50%">, but a warning is displayed.

* FIXED: Crash if start of file is not a declaration but ordinary non-blank
  text.

* ADDED: Improved source-location handling and some additional call-backs
  to the call-back interface, preparing the parser for supporting SGML
  syntax highlighting and checking editors.  See get_sgml_parser/2 and
  sgml_parse/2 predicates.

VERSION 1.0.7
=============

* IMPROVED: Redirect all memory management to print a fatal error message
  instead of crashing.
